# rudu

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  fs.rs  main.rs  ui.rs
