[package]
name = "rudu"
version = "0.1.0"
edition = "2024"
description = "Terminal disk usage browser write on Rust (ncdu-style)"
license = "MIT"
repository = "https://github.com/poise52/rudu"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
crossbeam-channel = "0.5"
rayon = "1"

[profile.release]
lto = "thin"
codegen-units = 1